--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0"
+    "@testing-library/react": "^9.5.0",
+    "cypress": "^6.6.0"
   }
 }
